src/App.css
body {
  background-color: #cadffa;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.header {
  width: 90%;
  margin: 40px auto;
  padding: 70px 20px;
  text-align: center;
  background: linear-gradient(135deg, #9fadbc, #0ac2df);
  border-radius: 25px;
  color: white;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
}
.header h3 {
  font-size: 48px;
  margin-bottom: 15px;
  font-weight: bold;
}
.header p {
  font-size: 20px;
  opacity: 0.95;
}

.cardcollection {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 30px;
  padding: 30px;
}

.card1 {
  width: 42%;
  background-color: white;
  display: flex;
  align-items: flex-start;
  gap: 30px;
  padding: 30px;
  border-radius: 25px;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
  transition: 0.4s ease;
  overflow: hidden;
}

.card1:hover {
  transform: translateY(-10px);
  box-shadow: 0 18px 35px rgba(0, 0, 0, 0.35);
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.img1 {
  cursor: pointer;
  width: 180px;
  height: 180px;
  border-radius: 15px;
  object-fit: cover;
  transition: 0.3s;
}

.img1:hover {
  transform: scale(1.05);
}

.aboutimg1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  font-size: 17px;
  line-height: 1.8;
  color: #444;
}

.name {
  padding: 10px 20px;
  background-color: rgb(248, 188, 36);
  border-radius: 15px;
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 18px;
  display: inline-block;
  width: fit-content;
  transition: 0.3s;
}

.name:hover {
  background-color: rgba(238, 186, 55, 0.8);
}

.button {
  margin-left: auto;
  margin-top: 20px;
  padding: 12px 24px;
  border: none;
  border-radius: 30px;
  background-color: rgb(6, 162, 240);
  color: white;
  font-size: 15px;
  font-weight: bold;
  cursor: pointer;
  transition: 0.4s;
  width: fit-content;
  transition: 0.3s;
}

.button:hover {
  background-color: #0898b0;
  transform: scale(1.05);
}

.moreInfo {
  margin-top: 20px;
  padding: 18px;
  background-color: white;
  border-radius: 15px;
  color: #333;
  line-height: 1.8;
  animation: 4s ease;
  z-index: 1;
}
.lessinfobutton {
  margin-left: auto;
  margin-top: 20px;
  padding: 12px 24px;
  border: none;
  border-radius: 30px;
  background-color: rgb(6, 162, 240);
  color: white;
  font-size: 15px;
  font-weight: bold;
  cursor: pointer;

  width: fit-content;
  transition: 3s;
}

.footer {
  text-align: center;
  padding: 20px;
  background-color: #f1f1f1;
  color: #333;
  margin-top: 50px;
  font-size: 15px;
  font-weight: bold;
}

